fixed mobile white space bug
fixed css for mobile view removed white space on right. also added html.js template for future custom template work.

--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,12 @@
 }
 
 html, body {
-  max-width: 100vw;
+  scroll-behavior: smooth;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: clip;
+  width: 100%;
+  position: relative;
 }
 
 body {
@@ -14,12 +16,17 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   margin-bottom: 40px;
+  width: 100%;
+}
+
+#___gatsby {
+  width: 100%;
 }
 
 .global-header {
   display: block;
   background-color: var(--clr-primary);
-  width: 100vw;
+  width: 100%;
   text-align: center;
   padding: 10px;
   max-height: 360px;
